# zini

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.Dockerfile
migrations/2023-12-07-205828_begin/: down.sql  up.sql
migrations/2023-12-08-002255_project/: down.sql  up.sql
migrations/2023-12-08-003343_user_primary_key/: down.sql  up.sql
migrations/2023-12-12-001132_flows/: down.sql  up.sql
migrations/2023-12-15-184242_sessions/: up.sql
migrations/2023-12-16-193254_n_tasks_not_null/: down.sql  up.sql
migrations/2023-12-16-223252_group_state/: down.sql  up.sql
migrations/2024-01-30-061425_active_project/: down.sql  up.sql
migrations/2024-02-29-003857_jobs/: down.sql  up.sql
scripts/: dev_deps.sh  dev_setup.sh  setup.sh
src/: auth.rs  events.rs  interop.rs  lib.rs  llm.rs  main.rs  router.rs  schema.rs  session.rs  tables.rs
src/api/: flows.rs  jobs.rs  mod.rs  project.rs  projects.rs  prompts.rs  sessions.rs  socket.rs  tasks.rs  user.rs  users.rs  voice.rs
src/tables/: flows.rs  jobs.rs  mod.rs  project.rs  projects.rs  sessions.rs  tasks.rs  users.rs
