[package]
name = "zini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
chrono = { version = "0.4.31", features = ["serde"] }
console-subscriber = "0.2.0"
diesel = { version = "2.1.4", features = ["chrono", "postgres", "r2d2", "uuid"] }
futures = "0.3.30"
http = "0.2.0"
prism_client = { git = "https://github.com/kraemahz/prism.git", branch = "main" }
serde = "1.0.193"
serde_json = "1.0.110"
subseq_util = { git = "https://github.com/kraemahz/subseq_util.git", branch = "main" }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
warp = "0.3.6"
warp-sessions = "1.0.19"

[dev-dependencies]
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
function_name = "0.3.0"
