[package]
name = "zini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.14", features = ["derive"] }
diesel = { version = "2.1.4", features = ["chrono", "postgres", "r2d2", "uuid"] }
futures = "0.3.30"
http = "0.2.0"
lazy_static = "1.4.0"
prism_client = { git = "https://github.com/kraemahz/prism.git", branch = "main" }
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"] }
serde = "1.0.193"
serde_json = "1.0.110"
subseq_util = { git = "https://github.com/kraemahz/subseq_util.git", branch = "main" }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
warp = { version = "0.3.6", features = ["tls"] }
warp-sessions = "1.0.19"

[dev-dependencies]
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
function_name = "0.3.0"
