[package]
name = "zini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.14", features = ["derive"] }
diesel = { version = "2.1.4", features = ["chrono", "r2d2", "postgres", "postgres_backend", "uuid", "serde_json"] }
email_address = "0.2.4"
futures = "0.3.30"
futures-util = { version = "0.3.29", features = ["tokio-io", "sink"] }
http = "0.2.0"
lazy_static = "1.4.0"
prism_client = { git = "https://github.com/kraemahz/prism.git", branch = "main" }
rand = { version = "0.8.5" }
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"] }
serde = "1.0.193"
serde_cbor = "0.11.2"
serde_json = "1.0.110"
subseq_util = { git = "https://github.com/kraemahz/subseq_util.git", branch = "main", features = ["console"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-websockets = { version = "0.4.0", features = ["rustls-native-roots", "getrandom", "client"] }
tracing = "0.1.40"
url = "2.4.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
warp = { version = "0.3.6", features = ["tls", "websocket"] }
warp-sessions = "1.0.19"

[dev-dependencies]
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
function_name = "0.3.0"
